--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Art & Illustration
+title: Erika Himsl Art & Illustration
 email: your-email@domain.com
 url: https://github.com/jeromelachaud/freelancer-theme
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: ""
 keywords: "art, illustration, portfolio"
 skills: 
-meta_author: LastName FirstName
+meta_author: Himsl Erika
 
 # Google webmaster tools
 google_verify:
@@ -32,7 +32,7 @@ color:
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
+  copyright: Erika Himsl
   location: 
   social: 
   credits: 
