--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Erika Himsl Art & Illustration
 email: your-email@domain.com
-url: https://www.erikahimsl.com/
+url: https://www.erikahimsl.com
 description: ""
 keywords: "art, illustration, portfolio"
 skills: 
