--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: ffffff #80B3FF
-  primary-rgb: "24,288,156" #"128,179,255"
-  secondary: 000000 #FD6E8A
-  secondary-dark: 233140 #A2122F
+  primary: 
+  primary-rgb: 
+  secondary: 
+  secondary-dark: 
 
 # Footer settings
 footer:
